data/derived/fa15/progs/unify/prog1589.ml.out
Characters 122-125:
  wwhile (foo, b);;
          ^^^
Error: This expression has type ('a -> 'a) -> 'a -> 'a * bool
       but an expression was expected of type ('a -> 'a) -> ('a -> 'a) * bool
       Type 'a -> 'a * bool is not compatible with type ('a -> 'a) * bool 
